[tool.poetry]
name = "rshanker779-common"
version = "1.0.0"
description = ""
authors = ["Rohan Shanker <rshanker779@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = ">=2.28.2"
snakeviz = ">=2.1.1"


[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
wheel = ">=0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
